[tool.poetry]
name = "chocs_middleware.trace"
version = "0.4.2"
description = "Http tracing middleware for chocs library."
authors = ["Dawid Kraczkowski <dawid.kraczkowski@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "chocs_middleware" }
]
homepage = "https://github.com/kodemore/chocs-trace"
repository = "https://github.com/kodemore/chocs-trace"
documentation = "https://github.com/kodemore/chocs-trace"

keywords = ["trace", "chocs", "middleware", "logger"]

[tool.poetry.dependencies]
python = "^3.8"
gid = "^1.0.1"
chocs = "^1.6.1"

[tool.poetry.dev-dependencies]
sentry-sdk = "^1.5.6"
requests = "^2.27.1"
httmock = "^1.4.0"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
isort = "^5.10.1"
black = "^22.1.0"
mypy = "^0.931"
pylint = "^2.12.2"
types-requests = "^2.27.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
